--- a/pom.xml
+++ b/pom.xml
@@ -56,22 +56,34 @@
 
     </dependencies>
 
+    <!-- 设定持续集成发布包服务器 -->
+    <distributionManagement>
+        <repository>
+            <id>wpos-nexus-server</id>
+            <name>Nexus Release Repository</name>
+            <url>http://123.56.84.239:8070/nexus/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>wpos-nexus-server</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://123.56.84.239:8070/nexus/content/repositories/snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 
-
-
-	<build>
-		<plugins>
-			<!-- test插件 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20</version>
-				<configuration>
-					<!-- 暂时全部忽略单元测试 -->
-					<skipTests>true</skipTests>
-				</configuration>
-			</plugin>
-		</plugins>
+    <build>
+        <plugins>
+            <!-- test插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20</version>
+                <configuration>
+                    <!-- 暂时全部忽略单元测试 -->
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
         <defaultGoal>compile</defaultGoal>
-	</build>
+    </build>
 </project>
