--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,20 @@
     </dependencies>
 
 
-
+    <!-- 设定持续集成发布包服务器 -->
+    <distributionManagement>
+        <repository>
+            <id>wpos-nexus-server</id>
+            <name>Nexus Release Repository</name>
+            <url>http://123.56.84.239:8070/nexus/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>wpos-nexus-server</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://123.56.84.239:8070/nexus/content/repositories/snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 
 
 
