--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wiseasy.paycloud</groupId>
     <artifactId>wise-paycloud-open-api-sdk-java</artifactId>
-    <version>1.0-1</version>
+    <version>2.3.1.1</version>
     <packaging>jar</packaging>
 
 
